--- a/Sites/MetraView/App_LocalResources/ChangePassword.aspx.pt-br.resx
+++ b/Sites/MetraView/App_LocalResources/ChangePassword.aspx.pt-br.resx
@@ -121,10 +121,10 @@
     <value>Alterar senha</value>
   </data>
   <data name="InvalidOldpassword" xml:space="preserve">
-    <value>Senha antiga inválida Tente novamente.</value>
+    <value>Senha antiga inválida. Tente novamente.</value>
   </data>
   <data name="InvalidPassword" xml:space="preserve">
-    <value>Senha nova inválida  Tente novamente.</value>
+    <value>Senha nova inválida. Tente novamente.</value>
   </data>
   <data name="MTTitle1Resource1.Text" xml:space="preserve">
     <value>Alterar senha</value>
@@ -133,7 +133,7 @@
     <value>MetraView</value>
   </data>
   <data name="tbConfirmPasswordResource1.Label" xml:space="preserve">
-    <value>Confirmar senha</value>
+    <value>Senha de confirmação</value>
   </data>
   <data name="tbNewPasswordResource1.Label" xml:space="preserve">
     <value>Nova senha</value>
@@ -145,8 +145,8 @@
     <value>Nome do usuário</value>
   </data>
   <data name="TEXT_STANDARD_CHANGE_PASSWORD_MSG" xml:space="preserve">
-    <value>&lt;ul&gt;&lt;li&gt;As senhas devem conter entre 7 e 1024 caracteres.&lt;/li&gt;
- &lt;li&gt; As senhas devem conter pelo menos uma letra minúscula, uma maiúscula e um dígito. Caracteres especiais são opcionais.&lt;/li&gt;&lt;/ul&gt;</value>
+    <value>&lt;ul&gt;&lt;li&gt;As senhas devem ter entre 7 e 1024 caracteres.&lt;/li&gt;
+ &lt;li&gt; A senha deve conter pelo menos uma letra minúscula, uma letra maiúscula e um número. Os caracteres especiais são opcionais.&lt;/li&gt;&lt;/ul&gt;</value>
   </data>
   <data name="TEXT_SU_NOTE" xml:space="preserve">
     <value>&lt;br /&gt;&lt;br /&gt;&lt;b&gt;OBS.:&lt;/b&gt; Como um Super Usuário, você deve alterar a entrada no ServerAccess em cada máquina e criptografá-la.</value>
