--- a/Sites/MetraView/App_LocalResources/Usage.aspx.pt-br.resx
+++ b/Sites/MetraView/App_LocalResources/Usage.aspx.pt-br.resx
@@ -127,7 +127,7 @@
     <value>Exibição detalhada</value>
   </data>
   <data name="endDateResource1.Label" xml:space="preserve">
-    <value>Para</value>
+    <value>para</value>
   </data>
   <data name="ShowReportFor.Text" xml:space="preserve">
     <value>Exibir relatório para:</value>
