--- a/Sites/MetraView/App_LocalResources/AccountSecurity.aspx.pt-BR.resx
+++ b/Sites/MetraView/App_LocalResources/AccountSecurity.aspx.pt-BR.resx
@@ -121,6 +121,6 @@
     <value>Segurança da conta</value>
   </data>
   <data name="PageResource1.Title" xml:space="preserve">
-    <value>MetraCare - Segurança da conta</value>
+    <value>MetraCare - Segurança de conta</value>
   </data>
 </root>
