--- a/Sites/MetraView/Payments/App_LocalResources/WorldPayFailure.aspx.pt-BR.resx
+++ b/Sites/MetraView/Payments/App_LocalResources/WorldPayFailure.aspx.pt-BR.resx
@@ -118,9 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="FAILED.Text" xml:space="preserve">
-    <value>[pt-BR]Your credit card was rejected by worldpay.</value>
+    <value>Seu cartão de crédito foi rejeitado pela worldpay.</value>
   </data>
   <data name="PageResource1.Title" xml:space="preserve">
-    <value>[pt-BR]WorldPay Failure</value>
+    <value>Falha do WorldPay</value>
   </data>
 </root>
