--- a/Sites/MetraView/UserControls/App_LocalResources/CurrentChargesByFolder.ascx.pt-br.resx
+++ b/Sites/MetraView/UserControls/App_LocalResources/CurrentChargesByFolder.ascx.pt-br.resx
@@ -118,16 +118,16 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="ActualTax.Text" xml:space="preserve">
-    <value>[pr-BR]Actual Tax</value>
+    <value>Imposto real</value>
   </data>
   <data name="ImpliedTax.Text" xml:space="preserve">
-    <value>[pr-BR]Included Tax</value>
+    <value>Imposto incluso</value>
   </data>
   <data name="IncludedInformationalTax.Text" xml:space="preserve">
-    <value>[pr-BR]Included Informational Tax</value>
+    <value>Imposto informativo incluso</value>
   </data>
   <data name="InformationalTax.Text" xml:space="preserve">
-    <value>[pr-BR]Informational Tax</value>
+    <value>Imposto informativo</value>
   </data>
   <data name="PrebillAdjustments.Text" xml:space="preserve">
     <value>Ajustes pré-faturamento</value>
@@ -136,18 +136,18 @@
     <value>Subtotal</value>
   </data>
   <data name="Tax.Text" xml:space="preserve">
-    <value>[pr-BR]Tax</value>
+    <value>Imposto</value>
   </data>
   <data name="TaxAdjustments.Text" xml:space="preserve">
     <value>Ajuste de imposto</value>
   </data>
   <data name="Total.Text" xml:space="preserve">
-    <value>[pr-BR]Total</value>
+    <value>Total</value>
   </data>
   <data name="TotalCharges.Text" xml:space="preserve">
     <value>Total de cobranças</value>
   </data>
   <data name="Usage.Text" xml:space="preserve">
-    <value>[pr-BR]Usage</value>
+    <value>Utilização</value>
   </data>
 </root>
