--- a/Sites/MetraView/UserControls/App_LocalResources/ProductUsageGraph.ascx.pt-br.resx
+++ b/Sites/MetraView/UserControls/App_LocalResources/ProductUsageGraph.ascx.pt-br.resx
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -124,6 +124,6 @@
     <value>.</value>
   </data>
   <data name="ProductUsageGraphText.Text" xml:space="preserve">
-    <value>Esse gráfico representa as cobranças máximas de utilização para o intervalo divididas por produtos.  Para exibir mais detalhes a respeito dessas cobranças clique em </value>
+    <value>Esse gráfico representa as cobranças mais utilizadas para o intervalo atual de faturamento, divididas por produto. Para ver mais detalhes sobre essas cobranças clique </value>
   </data>
 </root>
