--- a/Sites/MetraView/UserControls/App_LocalResources/UsageGraph.ascx.pt-br.resx
+++ b/Sites/MetraView/UserControls/App_LocalResources/UsageGraph.ascx.pt-br.resx
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -124,6 +124,6 @@
     <value>.</value>
   </data>
   <data name="UsageGraphText.Text" xml:space="preserve">
-    <value>Esse gráfico representa as cobranças máximas de utilização para o intervalo divididas por grupos.  Para exibir mais detalhes a respeito dessas cobranças clique em</value>
+    <value>Esse gráfico representa as cobranças mais utilizadas para o intervalo atual de faturamento divididas por grupo. Para exibir mais detalhes sobre essas cobranças, clique</value>
   </data>
 </root>
